[package]
name = "commanders_rts"
version = "0.1.0"
edition = "2021"
authors = ["Devin Bidwell <dbidwell94@biddydev.com>"]

[workspace]
members = ["workspaces/*"]
resolver = "2"

[workspace.dependencies]
bevy = { version = "0.14", features = ["wayland", "bevy_dev_tools"] }
serde = { version = "1", features = ["derive"] }
bevy_asset_loader = { version = "0.21" }
bevy-ui-dsl = { version = "0.9" }

[dependencies]
commanders_bin = { path = "./workspaces/commanders_bin" }


# for Linux
[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

# for Windows
[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"


[profile.release]
codegen-units = 1
lto = "thin"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
